# ai-transactional-agent-fastapi

./: .dockerignore  .env.ci.example  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_MODE.md  DOCKER_SETUP.md  LANGGRAPH_STUDIO_GUIDE.md  Makefile  PROMPTS.md  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  langgraph.json  main.py  pyproject.toml  test_llm_config.py  test_simple_connection.py  test_tools.py  visualize_graph.py
.github/: README.md
.github/workflows/: cd-aws.yml  cd-ec2.yml  ci.yml
.langgraph_api/: .langgraph_ops.pckl
alembic/: env.py
alembic/versions/: 1e176efa0a74_initial_schema_with_conversations_.py
apps/: main.py
apps/agents/transactional/: agent.py  config.py  graph.py  state.py
apps/agents/transactional/nodes/: __init__.py  confirmation.py  conversation.py  extractor.py  transaction.py  validator.py
apps/agents/transactional/nodes/conversation/: node.py
apps/agents/transactional/nodes/extractor/: node.py
apps/agents/transactional/nodes/transaction/: node.py
apps/agents/transactional/nodes/validator/: node.py
apps/agents/transactional/prompts/: __init__.py  confirmation.py  conversation.py  extractor.py  transaction.py  validator.py
apps/agents/transactional/routes/intent/: route.py
apps/agents/transactional/routes/validation/: route.py
apps/agents/transactional/state/: state.py
apps/agents/transactional/tools/: __init__.py  execute_transaction.py  format_phone_number.py  get_transaction_status.py  http_client.py  validate_transaction.py
apps/core/: logging.py
apps/domain/: models.py
apps/domain/ports/: __init__.py  repository_port.py  transaction_port.py
apps/infrastructure/clients/: transaction_client.py
apps/infrastructure/persistence/: database.py  models.py  repositories.py
apps/orchestrator/: constants.py  main.py  settings.py
apps/orchestrator/api/: app.py
apps/orchestrator/api/exception_handlers/: handlers.py
apps/orchestrator/api/health/: router.py
apps/orchestrator/api/middlewares/: logging.py  request_id.py
apps/orchestrator/core/: config.py  constants.py  exceptions.py  logging.py  messages.py
apps/orchestrator/databases/: postgres.py
apps/orchestrator/domain/: models.py
apps/orchestrator/domain/entities/: __init__.py  base.py  conversation.py  message.py  transaction.py
apps/orchestrator/domain/exceptions/: base.py
apps/orchestrator/domain/ports/: repository_port.py  transaction_port.py
apps/orchestrator/infrastructure/clients/: models.py  transaction_client.py
apps/orchestrator/infrastructure/persistence/: __init__.py  database.py  models.py  repositories.py
apps/orchestrator/infrastructure/persistence/repositories/: __init__.py  conversation_repository.py  transaction_repository.py
apps/orchestrator/services/: persistence_service.py
apps/orchestrator/v1/: __init__.py
apps/orchestrator/v1/routers/: __init__.py  chat.py  conversations.py  router.py  transactions.py
apps/orchestrator/v1/schemas/: __init__.py  chat.py  common.py  conversation.py  transaction.py
aws/: task-definition.json
aws/terraform/: main.tf  variables.tf
docker/: Dockerfile  Dockerfile.mock  README.md
docker/dockerfiles/: Dockerfile.agents  Dockerfile.mock_api  Dockerfile.orchestrator
docker/postgres/: init.sql  pg_hba.conf
docs/: ARCHITECTURE.md  CI_CD.md  CODE_QUALITY.md  DEVELOPMENT.md  README.md  TESTING.md
docs/reference/: CHECKPOINTING.md  PATRONES_LANGGRAPH.md
mock_api/: README.md  __init__.py  main.py  models.py  utils.py
mock_api/routers/: __init__.py  transactions.py
notebooks/: README.md
prompts/: PROMPTS.md  README.md
scripts/: setup-github-secrets.sh  test-precommit.sh  test_llm_config.py  visualize_graph.py
src/agents/transactional/: agent.py
src/agents/transactional/nodes/conversation/: node.py
src/agents/transactional/nodes/extractor/: node.py
src/agents/transactional/nodes/transaction/: node.py
src/agents/transactional/nodes/validator/: node.py
src/agents/transactional/routes/intent/: route.py
src/agents/transactional/routes/validation/: route.py
src/apps/: main.py
src/apps/api/: app.py
src/apps/api/exception_handlers/: handlers.py
src/apps/api/health/: router.py
src/apps/api/middlewares/: logging.py  request_id.py
src/apps/core/: config.py  exceptions.py  logging.py
src/apps/domain/ports/: __init__.py  repository_port.py  transaction_port.py
src/apps/infrastructure/clients/: transaction_client.py
src/apps/infrastructure/persistence/: database.py  models.py  repositories.py
src/apps/v1/routers/: router.py
src/config/databases/: postgres.py
src/shared/domain/entities/: base.py
src/shared/domain/exceptions/: base.py
tests/: conftest.py
tests/e2e/: test_complete_transaction_flows.py  test_transaction_flow.py
tests/integration/: test_chat_integration.py  test_complete_flows.py  test_conversations_router.py  test_transaction_flows.py  test_transactions_router.py
tests/integration/api/: test_chat_integration.py  test_chat_router.py  test_conversations_router.py  test_health.py  test_transactions_router.py
tests/unit/agents/nodes/: __init__.py  test_confirmation.py  test_transaction.py  test_validator.py
tests/unit/agents/prompts/: __init__.py  test_prompts.py
tests/unit/agents/tools/: test_execute_transaction.py  test_format_phone_number.py  test_get_transaction_status.py  test_validate_transaction.py
tests/unit/agents/transactional/: test_agent.py  test_config.py  test_graph.py
tests/unit/agents/transactional/nodes/: test_conversation_node.py  test_extractor_node.py
tests/unit/orchestrator/: test_constants.py  test_settings.py
tests/unit/orchestrator/api/: __init__.py  test_exception_handlers.py  test_logging_middleware.py  test_request_id_middleware.py
tests/unit/orchestrator/core/: __init__.py  test_exceptions.py
tests/unit/orchestrator/infrastructure/: __init__.py  test_conversation_repository.py  test_transaction_client.py  test_transaction_repository.py
tests/unit/orchestrator/services/: test_persistence_service.py
(+12 files in other folders)
