[project]
name = "ai-transactional-agent-fastapi"
version = "1.0.0"
description = "Agente conversacional transaccional con FastAPI y LangGraph"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]

dependencies = [
    # Core Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # LangChain/LangGraph (versiones modernas 2025)
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.27",
    "langgraph-checkpoint-postgres>=2.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # HTTP Client
    "httpx>=0.27.0",
    # Resiliencia
    "tenacity>=9.0.0",
    "pybreaker>=1.2.0",
    # Logging
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    # Validación
    "phonenumbers>=8.13.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "psycopg>=3.2.13",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "pytest-httpx>=0.35.0",
    "faker>=30.0.0",
    # Linting & Formatting
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    # Type Stubs
    "types-requests>=2.31.0",
    # Security
    "bandit>=1.7.0",
    # Pre-commit
    "pre-commit>=3.8.0",
    "langgraph-cli[inmem]>=0.4.7",
    "grandalf>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "scripts/",
    "mock_api/",
    "tests/",
    "alembic/",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "S",     # bandit security
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented code)
    "PL",    # pylint
    "PERF",  # performance
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # use of assert (OK in tests)
    "PLR0913", # too many arguments
    "PLR2004", # magic value in comparison
    "ERA001",  # commented code (useful for documentation/TODO)
    "PLC0415", # import outside top-level (needed for circular imports)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused arguments OK in fixtures
    "PLR2004", # magic values OK in tests
]
"alembic/**/*.py" = [
    "ARG001",  # unused arguments in migrations
]

[tool.ruff.lint.isort]
known-first-party = ["apps"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false  # LangChain tiene muchos Any
check_untyped_defs = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "pybreaker.*",
    "tenacity.*",
    "fastapi.*",
    "sqlalchemy.*",
    "starlette.*",
]
ignore_missing_imports = true

# Relax strict rules for framework-heavy files
[[tool.mypy.overrides]]
module = [
    "apps.orchestrator.main",
    "apps.orchestrator.api.*",
    "apps.orchestrator.v1.routers.*",
    "apps.agents.transactional.tools.*",
    "apps.agents.transactional.agent",
    "apps.agents.transactional.graph",
    "apps.agents.transactional.state",
    "apps.orchestrator.databases.*",
    "apps.orchestrator.infrastructure.persistence.*",
    "apps.orchestrator.infrastructure.clients.*",
    "apps.orchestrator.services.*",
]
disallow_untyped_defs = false
disallow_untyped_decorators = false
warn_return_any = false
disallow_subclassing_any = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=apps",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=70",
    "-v",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "mock_api", "scripts", "alembic"]
skips = ["B104", "B105"]  # Allow 0.0.0.0 binding and hardcoded passwords in config (they have noqa)
